--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,15 @@
 language: julia
 os:
-    - linux
-    - osx
+  - linux
+  - osx
 julia:
-    - 0.4
-    - 0.5
-    - 0.6
-    - nightly
+  - 0.6
+  - nightly
+matrix:
+  allow_failures:
+  - julia: nightly  
 notifications:
-    email: false
-sudo: false
-#script: # use the default script setting which is equivalent to the following
-#    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#    - julia -e 'Pkg.clone(pwd()); Pkg.build("HttpServer")'
-#    - julia -e 'Pkg.test("HttpServer", coverage=true)'
+  email: false
 after_success:
-    - julia -e 'cd(Pkg.dir("HttpServer")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia -e 'cd(Pkg.dir("HttpServer")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("HttpServer")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
